qa-env/client/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-client
  namespace: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qa-client
  template:
    metadata:
      labels:
        app: qa-client
    spec:
      containers:
      - name: qa-client-container
        image: image
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
        ports:
        - containerPort: 80
