qa-env/client/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: qa
  annotations:
    cloud.google.com/backend-config: '{"default": "emr-qa-client"}'
spec:
  selector:
    app: qa-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
